force-app/main/default/objects/ssot__ClaimPaymentDetail__dlm/fields/ssot__ClaimedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimedAmount__c</fullName>
    <label>Claimed Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>