force-app/main/default/objects/ssot__ClaimPaymentDetail__dlm/fields/ssot__ClaimPaymentDetailStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimPaymentDetailStatus__c</fullName>
    <label>Claim Payment Detail Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimPaymentDetailStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>