force-app/main/default/objects/ssot__ClaimPaymentDetail__dlm/fields/ssot__ClaimPaymentDetailType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimPaymentDetailType__c</fullName>
    <label>Claim Payment Detail Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimPaymentDetailType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>