force-app/main/default/objects/ssot__ClaimPaymentDetail__dlm/fields/ssot__rel_1723128254495_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128254495_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimPaymentDetail_ClaimCoverageId_m_rel</label>
    <referenceTo>ssot__ClaimCoverage__dlm</referenceTo>
    <relationshipLabel>ClaimPaymentDetail_ClaimCoverageId_m_rel</relationshipLabel>
    <relationshipName>rel_1723128254495_end</relationshipName>
    <type>Lookup</type>
</CustomField>