force-app/main/default/objects/ssot__ClaimPaymentDetail__dlm/fields/ssot__rel_1723128259907_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128259907_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimPaymentDetail_ClaimItemId_map_C_rel</label>
    <referenceTo>ssot__ClaimItem__dlm</referenceTo>
    <relationshipLabel>ClaimPaymentDetail_ClaimItemId_map_C_rel</relationshipLabel>
    <relationshipName>rel_1723128259907_end</relationshipName>
    <type>Lookup</type>
</CustomField>