force-app/main/default/objects/ssot__ClaimPaymentDetail__dlm/fields/ssot__rel_1723128319446_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128319446_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimPaymentDetail_ClaimParticipantR_rel</label>
    <referenceTo>ssot__ClaimParticipant__dlm</referenceTo>
    <relationshipLabel>ClaimPaymentDetail_ClaimParticipantR_rel</relationshipLabel>
    <relationshipName>rel_1723128319446_end</relationshipName>
    <type>Lookup</type>
</CustomField>